src/components/Dashboard/Sidebar/sidebar.scss
/* ... */
// .hide-sidebar {
//     transform: translateX(-100%);
// }
.hide-sidebar {
    transform: translateX(0%);
    width: 80px;
}

.hide-sidebar.sidebar .side-bar-profile .profile-name {
    display: none;
}

.corse-detail-box h3 {
    margin-bottom: 1rem;
}

.hide-sidebar.sidebar .brand-logo .main-logo{
    display: none;
}

.sidebar .brand-logo .sub-logo{
    display: none;
}

.hide-sidebar.sidebar .brand-logo .sub-logo{
    display: block;
}

.sidebar .menu-toggler {
    background: none;
    border: none;
    color: #fff;
    font-size: 1.3rem;
    cursor: pointer;
    padding: 0;
}

.sidebar .btn-collapse-sidebar {
    DISPLAY: NONE;
}

// .hide-sidebar.sidebar .nav {
//     align-items: center;
// }

.sidebar .brand-logo {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row-reverse;
    gap: 5px;
    margin: 43px 10px;
}

.sidebar.hide-sidebar .brand-logo {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    gap: 5px;
}

.sidebar.hide-sidebar .side-bar-profile .profile-wrapper .profile-pic {
    height: 35px;
    width: 35px;
}

.hide-sidebar.sidebar .brand-logo .sub-logo {
    margin: 0;
}

.sidebar.hide-sidebar .brand-logo {
    gap: 10px;
}

.sidebar .side-nav-wrapper .sidebar-nav-items a:hover * {
    color: #009CD8;
}

.sidebar .side-nav-wrapper .sidebar-nav-items a:hover img.side-nav-icon {
    filter: brightness(0) saturate(100%) invert(41%) sepia(80%) saturate(2886%) hue-rotate(170deg) brightness(100%) contrast(102%);
}

.sidebar .side-nav-wrapper .sidebar-nav-items .active-item:hover * {
    color: #fff;
}

.sidebar .side-nav-wrapper .sidebar-nav-items .active-item:hover img.side-nav-icon {
    filter: none;
}

.sidebar.hide-sidebar .menu-toggler {
    position: absolute;
    right: -10px;
    top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 20px;
    width: 20px;
    font-size: 0.7rem;
    border-radius: 50%;
    z-index: 9;
    color: #fff;
    background-color: #00a8d5;
}

.sidebar.hide-sidebar{
    overflow: visible;
}

.side-bar-btm {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    border-top: 1px solid #04b0be45;
    padding-top: 1rem;
}

.side-bar-btm .active-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    vertical-align: middle;
    margin: 10px 10px;
    color: rgb(255, 255, 255);
    text-decoration: none;
    position: relative;
    text-transform: capitalize;
    cursor: pointer !important;
    font-size: 14px;
    padding: 5px 15px;
    line-height: 1.2;
    opacity: 0.9;
    font-weight: 500;
    font-family: "Inter", Arial, sans-serif;
    white-space: nowrap;
    background-color: transparent;
    gap: 10px;
}

// .sidebar .nav a:last-child {
//     display: none;
// }
.nested-nav-container button.nested-item-toggler {
    margin: 0 !important;
}
.nested-nav-items.collapse-ddn a:hover {
    text-decoration: none;
    color: #2da5f3;
    background-color:transparent !important;
}


.sidebar .logout-btn img {
    width: 18px;
    height: 18px;
}

.sidebar.hide-sidebar .side-bar-btm .active-item.logout-btn span {
    display: none;
}

.logout-popup.modal-header button {
    display: none;
}

.logout-popup .modal-header {
    text-align: center;
    display: flex;
    justify-content: center;
    border: 0px;
}

.logout-popup .modal-header .modal-title {
    font-size: 1.6rem;
    font-weight: 600;
}

.logout-popup .modal-body {
    padding: 0px;
    color: #000 !important;
}

.logout-popup .btn-close {
    display: none;
}

.logout-popup .custom-footer-class button{
  border-radius: 5px !important;
  padding: 10px 30px !important;
}

.logout-popup .custom-footer-class button {
    color: grey;
}

@media only screen and (max-width:767px) {
    .main-panel,.full-width-panel {
        width: 100%;
    }
    
    .sidebar.hide-sidebar {
        width: 80px !important;
    }
    
    .sidebar .menu-toggler {
        position: absolute;
        right: -30px;
        top: 14px;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 20px;
        width: 20px;
        font-size: .7rem;
        border-radius: 50%;
        z-index: 9;
        color: #fff;
        background-color: #00a8d5;
    }
    
    .sidebar {
        width: 0;
        overflow: visible;
    }
    
    .sidebar .brand-logo .sub-logo {
        display: none;
    }
    
    .sidebar .brand-logo img {
        display: none;
    }
    .sidebar.hide-sidebar .brand-logo {
        margin: 22px 0px;
    }
    .sidebar.hide-sidebar .menu-toggler {
        top: 14px;
    }
    .sidebar .side-nav-wrapper {
        padding-bottom: 15px;
    }
}

